# deepcard2

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  MILESTONE-COMPLETION-REPORT.md  README.md  ROADMAP.md  docker-compose.yml  start-dev.sh  start_dev.sh  stop_dev.sh
backend/: .env.example  .env.testing  .gitignore  Dockerfile.dev  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/application/card/: __init__.py  dto.py  generator.py  service.py
backend/app/domain/card/: __init__.py  entity.py  repository.py  value_objects.py
backend/app/infrastructure/database/: models.py
backend/app/infrastructure/llm/: __init__.py  base.py  deepseek.py  factory.py  openai.py  siliconflow.py
backend/app/infrastructure/repositories/: card_repository.py
backend/app/interfaces/api/v1/: __init__.py
backend/app/interfaces/api/v1/endpoints/: card.py  llm.py
backend/app/shared/: config.py  database.py  database_init.py  logging_config.py  testing_config.py
backend/app/shared/infrastructure/: __init__.py
backend/tests/: __init__.py  conftest.py  test_happy_path.py  test_llm_integration.py  test_llm_providers.py  test_main.py  test_milestone2.py  verify_test_config.py
docs/: automated-testing-config.md  database-schema.md  development-guidelines.md  development-setup.md  development-tasks.md  domain-model.md  frontend-config-guide.md  milestone-1-acceptance.md  milestone-1.md  milestone-2-acceptance.md  milestone-2-git-commit.md  regression-testing-plan.md
docs/milestone-2/: README.md
frontend/: Dockerfile.dev  config.js  index.html  index.html.bak  next.config.js  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
milestone-2/: README.md
